--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.23.4",
     "aws-amplify": "^1.1.40",
     "aws-amplify-react": "^2.4.4",
     "nodemon": "^1.19.2",
