--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.4.3",
     "antd": "^3.23.4",
     "aws-amplify": "^1.1.40",
     "aws-amplify-react": "^2.4.4",
