--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.4.3",
+    "@material-ui/icons": "^4.4.3",
     "antd": "^3.23.4",
     "aws-amplify": "^1.1.40",
     "aws-amplify-react": "^2.4.4",
