--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
     "react-html5-camera-photo": "^1.4.3",
+    "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.2",
     "react-webcam": "^3.1.0"
